--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,4 +36,21 @@
   	<role-name>registeredUser</role-name>
   </security-role>
   
+   <error-page>
+        <error-code>404</error-code>
+        <location>/error-pages/404.html</location>
+    </error-page>
+
+    
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error-pages/500.html</location>
+    </error-page>
+
+    
+    <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/error-pages/error.html</location>
+    </error-page>
+    
 </web-app>
